objects/agf__ADM_User_Preferences__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <customSettingsVisibility>Protected</customSettingsVisibility>
    <description>Stores user preferences for the GUS application.</description>
    <fields>
        <fullName>agf__BacklogHideWorkWithSprintToggle__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This checkbox is used to determine whether work with a sprint is included in the Unified Walls Backlog Panel</description>
        <label>BacklogHideWorkWithSprintToggle</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>agf__ShowBacklogviewonVirtualWall__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if the user would like to display backlog view in the virtual wall.</description>
        <label>Show Backlog view on Virtual Wall</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>agf__ShowChatteronVirtualWall__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Indicates if the user will want to show or hide the chatter component on virtual wall.</description>
        <label>Show Chatter on Virtual Wall</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>agf__ShowDeleteTaskDialog__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Check this to show the &quot;Delete Task&quot; dialog on the Virtual Wall</description>
        <label>Show Delete Task Dialog</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>agf__ShowMoveTaskToCompletedDialog__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Check this to show the &quot;Move Task To Completed&quot; dialog on the Virtual Wall page.</description>
        <label>Show Move Task To Completed Dialog</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>agf__ShowMoveTaskToInProgressDialog__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Check this to show the &quot;Move Task To In Progress&quot; dialog on the Virtual Wall page.</description>
        <label>Show Move Task To In Progress Dialog</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>agf__ShowMoveUncompletedTasksDialog__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Check this to show the &quot;Move Uncompleted Tasks&quot; dialog when the Work is closed on the Virtual Wall page.</description>
        <label>Show Move Uncompleted Tasks Dialog</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>agf__ShowMoveWorkToOtherSprintDialog__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Check this to show the &quot;Move Work to Other Sprint Warning&quot; dialog on the Virtual Wall page.</description>
        <label>Show Move Work To Other Sprint Warning</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>agf__ShowProductTagAssignmentGuidedTour__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Shows the guided tour on the Product Tag Assignment Matrix.</description>
        <label>Show Product Tag Assignment Guided Tour</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>agf__ShowProductTagGuidedTour__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Check this to show the Guided Tour for the Product Tags on the Work edit page.</description>
        <label>Show Product Tag Guided Tour</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>agf__ShowRemoveWorkFromSprintDialog__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Check this to show the &quot;Remove Work From Sprint Warning&quot; dialog on the Virtual Wall page.</description>
        <label>Show Remove Work From Sprint Warning</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>agf__ShowVirtualWallGuidedTour__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Check this to show the Guided Tour on the Virtual Wall page.</description>
        <label>Show Virtual Wall Guided Tour</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>agf__TabPanelViewPreference__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Unchecked (default) = Shows the tab panels with tabs. Checked = Show tab panels stacked on top of each other.</description>
        <label>Tab Panel View Preference</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>agf__WorkPanelViewPreference__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Show Work Panel</label>
        <type>Checkbox</type>
    </fields>
    <label>User Preferences</label>
</CustomObject>